serviceability/jvmti/vthread/GetThreadState/GetThreadState.java testObjectWaitMillis failed

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 25
    • Component/s: hotspot
    • None
    • b09

      GetThreadStateTest::testObjectWaitMillis (pinned=false) failed once

      STARTED GetThreadStateTest::testObjectWaitMillis '[2] false'
        await state=0x1a1 (JVMTI_THREAD_STATE_ALIVE | JVMTI_THREAD_STATE_WAITING | JVMTI_THREAD_STATE_WAITING_WITH_TIMEOUT | JVMTI_THREAD_STATE_IN_OBJECT_WAIT) ...
        thread state=0x1a1 (JVMTI_THREAD_STATE_ALIVE | JVMTI_THREAD_STATE_WAITING | JVMTI_THREAD_STATE_WAITING_WITH_TIMEOUT | JVMTI_THREAD_STATE_IN_OBJECT_WAIT)
        expect state=0x401 (JVMTI_THREAD_STATE_ALIVE | JVMTI_THREAD_STATE_BLOCKED_ON_MONITOR_ENTER) ...
        thread state=0x5 (JVMTI_THREAD_STATE_ALIVE | JVMTI_THREAD_STATE_RUNNABLE)
      org.opentest4j.AssertionFailedError: expected: <1025> but was: <5>
      at org.junit.jupiter.api.AssertionFailureBuilder.build(AssertionFailureBuilder.java:151)
      at org.junit.jupiter.api.AssertionFailureBuilder.buildAndThrow(AssertionFailureBuilder.java:132)
      at org.junit.jupiter.api.AssertEquals.failNotEqual(AssertEquals.java:197)
      at org.junit.jupiter.api.AssertEquals.assertEquals(AssertEquals.java:150)
      at org.junit.jupiter.api.AssertEquals.assertEquals(AssertEquals.java:145)
      at org.junit.jupiter.api.Assertions.assertEquals(Assertions.java:531)
      at GetThreadStateTest.check(GetThreadStateTest.java:353)
      at GetThreadStateTest.testObjectWaitMillis(GetThreadStateTest.java:245)
      at java.base/java.lang.reflect.Method.invoke(Method.java:565)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:186)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ReferencePipeline$2$1.accept(ReferencePipeline.java:197)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:186)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.accept(ForEachOps.java:186)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.Spliterators$ArraySpliterator.forEachRemaining(Spliterators.java:1024)
      at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:570)
      at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:560)
      at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:153)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:176)
      at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:265)
      at java.base/java.util.stream.ReferencePipeline.forEach(ReferencePipeline.java:636)
      at java.base/java.util.stream.ReferencePipeline$7$1FlatMap.accept(ReferencePipeline.java:294)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.stream.ReferencePipeline$3$1.accept(ReferencePipeline.java:215)
      at java.base/java.util.ArrayList$ArrayListSpliterator.forEachRemaining(ArrayList.java:1716)
      at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:570)
      at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:560)
      at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:153)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:176)
      at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:265)
      at java.base/java.util.stream.ReferencePipeline.forEach(ReferencePipeline.java:636)
      at java.base/java.util.stream.ReferencePipeline$7$1FlatMap.accept(ReferencePipeline.java:294)
      at java.base/java.util.ArrayList$ArrayListSpliterator.forEachRemaining(ArrayList.java:1716)
      at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:570)
      at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:560)
      at java.base/java.util.stream.ForEachOps$ForEachOp.evaluateSequential(ForEachOps.java:153)
      at java.base/java.util.stream.ForEachOps$ForEachOp$OfRef.evaluateSequential(ForEachOps.java:176)
      at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:265)
      at java.base/java.util.stream.ReferencePipeline.forEach(ReferencePipeline.java:636)
      at java.base/java.util.ArrayList.forEach(ArrayList.java:1604)
      at java.base/java.util.ArrayList.forEach(ArrayList.java:1604)
      FAILED GetThreadStateTest::testObjectWaitMillis '[2] false'

            Assignee:
            Serguei Spitsyn
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: