src/hotspot/share/runtime/objectMonitor.cpp
@@ -1692,6 +1692,11 @@ void ObjectMonitor::wait(jlong millis, bool interruptible, TRAPS) {
       return;
     }
   }
+  if (interruptible) {
+    JavaThreadStatus state = millis != 0 ? JavaThreadStatus::IN_OBJECT_WAIT_TIMED
+                                         : JavaThreadStatus::IN_OBJECT_WAIT;
+    java_lang_Thread::set_thread_status(current->threadObj(), state);
+  }
 
   // create a node to be put into the queue
   // Critically, after we reset() the event but prior to park(), we must check
